Use cloudinary images for featureimage on posts

--- a/src/pages/blog/2019-10-18-kyoto.md
+++ b/src/pages/blog/2019-10-18-kyoto.md
@@ -5,7 +5,8 @@ date: 2019-10-18T08:25:09.176Z
 description: >-
   Fun times with friends exploring Kyoto
 featuredpost: false
-featuredimage: /img/img_20191112_114234.jpg
+featuredimage: >-
+  https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1575797824/4a8d9e_6c5dfd0f89244bf68d089e29fefda086_mv2_coeyes.webp
 tags:
   - kyoto
   - food
