--- a/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
+++ b/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
@@ -21,16 +21,38 @@ Our airbnb this time was located in a residential area that felt laid back, but 
 
 The downside to the two house airbnbs in Japan we have stayed at so far, has been a decentralized heating scheme. Each room has an individual heating/AC unit, so the hallways and bathrooms tend to be freezing in the winter. As someone who pees a lot at night, this took some getting used to.
 
-
-
 Later that week we met up with Marina and toured the Kobe Luminarie, a gorgeous lights display in downtown Kobe that also commemorates victims of the Great Hanshin Earthquake of 1995. Marina showed us a tasty street food treat consisting of senbei and a fried egg. So messy but so "oishii" (tasty)!!!
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493637/MVIMG_20191206_192327_dw51az.jpg "Marina, me and Brandon at Kobe Luminarie")
 
-
-
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493633/IMG_20191206_193257_epmrrp.jpg "Kobe Luminarie")
 
-
-
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493631/IMG_20191206_194800_ry3ta5.jpg "Tamago senbei at the Kobe Lumunarie")
+
+
+
+We also sang our hearts out with Marina at Super Jankara, a really nice karaoke place that looked like a spaceship inside. The karaoke system is way cooler and refined than the ones I've seen in the states. We had a lot of fun!
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493634/MVIMG_20191206_171952_clhrhp.jpg "Marina, me and Brandon at Super Jankara in Kobe")
+
+
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493634/MVIMG_20191206_173511_yt0o5g.jpg "Karaoke room at Super Jankara. Marina nailed a Taylor Swift song :)")
+
+
+
+Brandon and I tried Kobe beef at three different price points, since we adore watching those buzzfeed "worth it" videos. The cheapest was 10$ kobe beef ramen from Yazawa. This was delicious and we had the Shio ramen, a white salt kind of broth. 
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493621/IMG_2281_fwthbk.jpg "Shio ramen with Kobe beef at Yazawa")
+
+
+
+The middle price point was teppanyaki at Meriken Hatoba, and this was A5 Kobe beef. The chef and staff were notably so friendly, and the chef personally greets you and takes a picture with you. This was around 70-80$ per person. They also included a bit of sake and an appetizer for free. 
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493625/IMG_20191201_125006_zxkest.jpg "Brandon, me and the chef at Meriken Hatoba")
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493625/IMG_20191201_122153_z9rpdq.jpg "A5 Kobe beef at Meriken Hatoba")
+
+At the beginning of our trip, we had some Bungo wagyu from Oita, known for its juiciness, and I thought to myself "this is the best steak I have ever had in my life". Then at Meriken, I had the same thought (this one superceded the last one). Then at the last place, Ishida's in Kobe, I had this thought again. I think all three price points were "worth it", but I think Ishida's was especially worth it.
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493629/IMG_20191206_114410_yokeil.jpg "A5 Kobe beef at Ishida's")
