Update Blog "2019-12-16-kobe-11-29-12-9-2019"

--- a/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
+++ b/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
@@ -53,6 +53,24 @@ The middle price point was teppanyaki at Meriken Hatoba, and this was A5 Kobe be
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493625/IMG_20191201_122153_z9rpdq.jpg "A5 Kobe beef at Meriken Hatoba")
 
-At the beginning of our trip, we had some Bungo wagyu from Oita, known for its juiciness, and I thought to myself "this is the best steak I have ever had in my life". Then at Meriken, I had the same thought (this one superceded the last one). Then at the last place, Ishida's in Kobe, I had this thought again. I think all three price points were "worth it", but I think Ishida's was especially worth it.
+At the beginning of our trip while in Kurokawa, we had some Bungo wagyu from Oita, known for its juiciness, and I thought to myself "this is the best steak I have ever had in my life". Then at Meriken, I had the same thought (this one superceded the last one). Then at the last place, Ishida's in Kobe, I had this thought again. Regarding Yazawa's, Meriken, and Ishida's, I think all three price points were "worth it", but I think Ishida's was especially worth it.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493629/IMG_20191206_114410_yokeil.jpg "A5 Kobe beef at Ishida's")
+
+
+
+Kobe's chinatown was a festive street filled to the brim with people in long lines for tasty looking street food. 
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493623/IMG_2158_eizx9y.jpg "Kobe's chinatown")
+
+Towards the end of our time in Kobe, we took a several local trains over to Osaka, which took about an hour. We visited the Osaka aquarium, which happened to have an illumination outside going on as well, with a giant lit up whale. The aquarium was very impressive and featured a ginormous central tank that spanned several floors, filled with sharks, mantarays, and notably the whaleshark. I also really enjoyed the penguins.
+
+![](https://res.cloudinary.com/bctravel/video/upload/c_scale,f_auto,q_auto,w_1080/v1576493632/VID_20191205_183443_LS_kn3ao8.mp4 "Osaka Aquarium's water tunnel")
+
+
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493620/IMG_2230_jxry7k.jpg "penguins!!!")
+
+
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493620/IMG_2234_eqnlti.jpg "one small corner of the huge central tank at Osaka aquarium")
