Add featured image and small tweaks to post

--- a/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
+++ b/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
@@ -5,6 +5,8 @@ date: 2019-12-16T10:43:35.999Z
 description: >-
   Blog article about our time in Kobe 11/29-12/9, 2019: Kobe Luminarie, friends,
   karaoke, Kobe beef, Kobe chinatown, Osaka aquarium
+featuredimage: >-
+  https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493633/IMG_20191206_193257_epmrrp.jpg
 tags:
   - Japan
   - Kobe
@@ -21,7 +23,7 @@ Our airbnb this time was located in a residential area that felt laid back, but 
 
 The downside to the two house airbnbs in Japan we have stayed at so far, has been a decentralized heating scheme. Each room has an individual heating/AC unit, so the hallways and bathrooms tend to be freezing in the winter. As someone who pees a lot at night, this took some getting used to.
 
-Later that week we met up with Marina and toured the Kobe Luminarie, a gorgeous lights display in downtown Kobe that also commemorates victims of the Great Hanshin Earthquake of 1995. Marina showed us a tasty street food treat consisting of senbei and a fried egg. So messy but so "oishii" (tasty)!!!
+Later that week we met up with Marina and toured the Kobe Luminarie, a gorgeous lights display in downtown Kobe that also commemorates victims of the Great Hanshin Earthquake of 1995. Marina showed us a tasty street food treat consisting of senbei and a fried egg. So messy but so _oishii_ (tasty)!!!
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493637/MVIMG_20191206_192327_dw51az.jpg "Marina, me and Brandon at Kobe Luminarie")
 
@@ -29,25 +31,17 @@ Later that week we met up with Marina and toured the Kobe Luminarie, a gorgeous 
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493631/IMG_20191206_194800_ry3ta5.jpg "Tamago senbei at the Kobe Lumunarie")
 
-
-
 We also sang our hearts out with Marina at Super Jankara, a really nice karaoke place that looked like a spaceship inside. The karaoke system is way cooler and refined than the ones I've seen in the states. We had a lot of fun!
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493634/MVIMG_20191206_171952_clhrhp.jpg "Marina, me and Brandon at Super Jankara in Kobe")
 
-
-
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493634/MVIMG_20191206_173511_yt0o5g.jpg "Karaoke room at Super Jankara. Marina nailed a Taylor Swift song :)")
 
-
-
-Brandon and I tried Kobe beef at three different price points, since we adore watching those buzzfeed "worth it" videos. The cheapest was 10$ kobe beef ramen from Yazawa. This was delicious and we had the Shio ramen, a white salt kind of broth. 
+Brandon and I tried Kobe beef at three different price points, since we adore watching those buzzfeed "worth it" videos. The cheapest was 10$ kobe beef ramen from Yazawa. This was delicious and we had the Shio ramen, a white salt kind of broth.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493621/IMG_2281_fwthbk.jpg "Shio ramen with Kobe beef at Yazawa")
 
-
-
-The middle price point was teppanyaki at Meriken Hatoba, and this was A5 Kobe beef. The chef and staff were notably so friendly, and the chef personally greets you and takes a picture with you. This was around 70-80$ per person. They also included a bit of sake and an appetizer for free. 
+The middle price point was teppanyaki at Meriken Hatoba, and this was A5 Kobe beef. The chef and staff were notably so friendly, and the chef personally greets you and takes a picture with you. This was around 70-80$ per person. They also included a bit of sake and an appetizer for free.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493625/IMG_20191201_125006_zxkest.jpg "Brandon, me and the chef at Meriken Hatoba")
 
@@ -57,20 +51,14 @@ At the beginning of our trip while in Kurokawa, we had some Bungo wagyu from Oit
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493629/IMG_20191206_114410_yokeil.jpg "A5 Kobe beef at Ishida's")
 
-
-
 Kobe's chinatown was a festive street filled to the brim with people in long lines for tasty looking street food. 
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493623/IMG_2158_eizx9y.jpg "Kobe's chinatown")
 
 Towards the end of our time in Kobe, we took a several local trains over to Osaka, which took about an hour. We visited the Osaka aquarium, which happened to have an illumination outside going on as well, with a giant lit up whale. The aquarium was very impressive and featured a ginormous central tank that spanned several floors, filled with sharks, mantarays, and notably the whaleshark. I also really enjoyed the penguins.
 
-![](https://res.cloudinary.com/bctravel/video/upload/c_scale,f_auto,q_auto,w_1080/v1576493632/VID_20191205_183443_LS_kn3ao8.mp4 "Osaka Aquarium's water tunnel")
-
-
+![](https://res.cloudinary.com/bctravel/image/upload/v1576496663/20191216_204254_egndow.gif "Osaka Aquarium's water tunnel")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493620/IMG_2230_jxry7k.jpg "penguins!!!")
-
-
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493620/IMG_2234_eqnlti.jpg "one small corner of the huge central tank at Osaka aquarium")
