--- a/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
+++ b/src/pages/blog/2019-12-16-kobe-11-29-12-9-2019.md
@@ -11,17 +11,17 @@ tags:
   - Japan
   - Kobe
 ---
-We spent 10 wonderful days in Kobe, the hometown of two of our friends, Hiromi and Marina. It was so good to see them, and we also had fun seeing the Kobe Luminarie, karaoke, eating Kobe beef, seeing Kobe's chinatown, and going to the Osaka aquarium.
+We spent 10 wonderful days in Kobe, the hometown of two of our friends, Hiromi and Marina. It was so good to see them, and we also had fun seeing the Kobe Luminarie, karaoke, eating Kobe beef, seeing Kobe's Chinatown, and going to the Osaka aquarium.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493624/IMG_20191202_173458_orrul3.jpg "Reunion party with Hiromi and Marina in Kobe")
 
-Our airbnb this time was located in a residential area that felt laid back, but was 2 minutes away from a subway station, and only 5-10 minutes by subway to Sannomiya, a central station in Kobe and where most shops/restaurants were located. The house was filled with beautiful tatami. We especially enjoyed the kotatsu, which is a low table covered on the sides by a blanket, and under which the area is heated electrically. The house also had a super cool Japanese bathtub, which had a control panel allowing you to push a button, and it would automatically fill with water and stop itself.
+Our Airbnb this time was located in a residential area that felt laid back yet was only 2 minutes away from a subway station, and only 5-10 minutes by subway to Sannomiya, a central station in Kobe and where most shops/restaurants were located. The house was filled with beautiful tatami and we especially enjoyed the kotatsu, which is a low table covered on the sides by a blanket under which the area is heated electrically. The house also had a super cool Japanese bathtub (_ofuro_), which had a control panel allowing you to push a button, and it would automatically fill with water and stop itself.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576494065/IMG_2171_nk1avy.jpg "The kotatsu, which became my crafting station, and which the Chavos also enjoyed")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493619/IMG_2172_p3pv8h.jpg "Kobe airbnb, with Brandon working on his laptop")
 
-The downside to the two house airbnbs in Japan we have stayed at so far, has been a decentralized heating scheme. Each room has an individual heating/AC unit, so the hallways and bathrooms tend to be freezing in the winter. As someone who pees a lot at night, this took some getting used to.
+The downside to the two house Airbnbs in Japan we have stayed at so far, has been a decentralized heating scheme. Each room has an individual heating/AC unit, so the hallways and bathrooms tend to be freezing in the winter. As someone who pees a lot at night, this took some getting used to.
 
 Later that week we met up with Marina and toured the Kobe Luminarie, a gorgeous lights display in downtown Kobe that also commemorates victims of the Great Hanshin Earthquake of 1995. Marina showed us a tasty street food treat consisting of senbei and a fried egg. So messy but so _oishii_ (tasty)!!!
 
@@ -37,25 +37,29 @@ We also sang our hearts out with Marina at Super Jankara, a really nice karaoke 
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493634/MVIMG_20191206_173511_yt0o5g.jpg "Karaoke room at Super Jankara. Marina nailed a Taylor Swift song :)")
 
-Brandon and I tried Kobe beef at three different price points, since we adore watching those buzzfeed "worth it" videos. The cheapest was 10$ kobe beef ramen from Yazawa. This was delicious and we had the Shio ramen, a white salt kind of broth.
+## Kobe beef - Is it worth it?
+
+Brandon and I tried Kobe beef at three different price points since we adore watching those [Buzzfeed "Worth It"](https://www.youtube.com/playlist?list=PL5vtqDuUM1DmXwYYAQcyUwtcalp_SesZD) videos. The cheapest was $10 Kobe beef ramen from Yazawa. This was delicious and we had the Shio ramen, a white salt kind of broth.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493621/IMG_2281_fwthbk.jpg "Shio ramen with Kobe beef at Yazawa")
 
-The middle price point was teppanyaki at Meriken Hatoba, and this was A5 Kobe beef. The chef and staff were notably so friendly, and the chef personally greets you and takes a picture with you. This was around 70-80$ per person. They also included a bit of sake and an appetizer for free.
+The middle price point was teppanyaki at Meriken Hatoba, and this was A5 Kobe beef. The chef and staff were notably so friendly, and the chef personally greets you and takes a picture with you. This was around $70-$80 per person. They also included a bit of sake and an appetizer for free.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493625/IMG_20191201_125006_zxkest.jpg "Brandon, me and the chef at Meriken Hatoba")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493625/IMG_20191201_122153_z9rpdq.jpg "A5 Kobe beef at Meriken Hatoba")
 
-At the beginning of our trip while in Kurokawa, we had some Bungo wagyu from Oita, known for its juiciness, and I thought to myself "this is the best steak I have ever had in my life". Then at Meriken, I had the same thought (this one superceded the last one). Then at the last place, Ishida's in Kobe, I had this thought again. Regarding Yazawa's, Meriken, and Ishida's, I think all three price points were "worth it", but I think Ishida's was especially worth it.
+At the beginning of our trip while in Kurokawa, we had some Bungo Wagyu from Oita, known for its juiciness, and I thought to myself "this is the best steak I have ever had in my life". Then at Meriken, I had the same thought (this one superseded the last one). Then at the last place, Ishida's in Kobe, I had this thought again. Regarding Yazawa's, Meriken, and Ishida's, I think all three price points were "worth it", but I think Ishida's was especially worth it.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493629/IMG_20191206_114410_yokeil.jpg "A5 Kobe beef at Ishida's")
 
-Kobe's chinatown was a festive street filled to the brim with people in long lines for tasty looking street food. 
+## Chinatown
+
+Kobe's Chinatown was a festive street filled to the brim with people in long lines for tasty looking street food.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1576493623/IMG_2158_eizx9y.jpg "Kobe's chinatown")
 
-Towards the end of our time in Kobe, we took a several local trains over to Osaka, which took about an hour. We visited the Osaka aquarium, which happened to have an illumination outside going on as well, with a giant lit up whale. The aquarium was very impressive and featured a ginormous central tank that spanned several floors, filled with sharks, mantarays, and notably the whaleshark. I also really enjoyed the penguins.
+Towards the end of our time in Kobe we took local trains over to Osaka which took about an hour. We visited the Osaka aquarium, which happened to have an illumination outside going on as well, with a giant lit-up whale. The aquarium was very impressive and featured a ginormous central tank that spanned several floors, filled with sharks, manta rays, and notably the whale shark. I also really enjoyed the penguins.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/v1576496663/20191216_204254_egndow.gif "Osaka Aquarium's water tunnel")
 
