Add author info to posts

--- a/src/pages/blog/2019-10-18-kyoto.md
+++ b/src/pages/blog/2019-10-18-kyoto.md
@@ -1,6 +1,7 @@
 ---
 templateKey: blog-post
 title: Kyoto
+author: Chris
 date: 2019-10-18T08:25:09.176Z
 description: >-
   Fun times with friends exploring Kyoto
