Update Blog "2020-02-03-bangkok"

--- a/src/pages/blog/2020-02-03-bangkok.md
+++ b/src/pages/blog/2020-02-03-bangkok.md
@@ -14,25 +14,25 @@ Bangkok 12/28/19-1/13/20
 
 We flew from Narita airport to Bangkok and stepped off the plane into the warm arms of humidity. It was a sharp contrast to the frost-breathing air that we had just left behind. Our two weeks in Bangkok were not really what I had expected. The city as a whole was harder for me to tolerate walking around in, due to a combination of the heat and the sewage smells on almost every street. I tend to get bothered by smell more than Brandon and it definitely affected my drive to go out and see things.
 
- In addition, bathrooms were not readily available very often along the public transport routes, which also decreased my desire to go out. I'm always the girl who needs to pee every 1-2 hours so this is a logistic I think about a lot. I was really missing Japanese subway bathrooms around then.
+In addition, bathrooms were not readily available very often along the public transport routes, which also decreased my desire to go out. I'm always the girl who needs to pee every 1-2 hours so this is a logistic I think about a lot. I was really missing Japanese subway bathrooms around then.
 
-Thus, we ended up getting a very small slice of Bangkok (tourist) life consisting of mostly air conditioned hotels, malls, massage places, and afternoon teas.
+Thus, we ended up getting a very small slice of Bangkok (tourist) life consisting of mostly air-conditioned hotels, malls, massage places, and afternoon teas.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722124/IMG_2869_mg3pf2.jpg "One of the food areas at a Bangkok Mall. I honestly can't recall which one.")
 
-First of all, let's talk Bangkok malls. They are insane. They are huge 8 story mega complexes with bone chilling AC and the most lush interior decorations you can think of. The above photo is how several malls chose to decorate their food areas. Some had indoor ponds and waterways winding around the fake vegetation. One mall had an indoor lake along which they had boat food vendors park. The most impressive was the new mall "Icon" for which you take a ferry across the water just to arrive at its front doors. Icon also provides an outdoor water fountain and laser light show each evening which was very impressive.
+First of all, let's talk about Bangkok malls. They are insane. They are huge 8 story mega complexes with bone chilling AC and the lushest interior decorations you can think of. The above photo is how several malls chose to decorate their food areas. Some had indoor ponds and waterways winding around the fake vegetation. One mall had an indoor lake along which they had boat food vendors park. The most impressive was the new mall "Icon" for which you take a ferry across the water just to arrive at its front doors. Icon also provides an outdoor water fountain and laser light show each evening which was very impressive.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722169/MVIMG_20200104_215349_x2pidk.jpg "Icon water and laser show")
 
 We spent a good amount of time in Bangkok malls since our airbnb was down the street from several and they were a good place to get food. We went to a couple others for their movie theaters, and we also scoured them for white clothing for the New Year's Eve "white" party we went to. This turned out too difficult for me so here I am below pictured in black. Good job Brandon for the white.
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722150/IMG_20191231_230832_xyxeij.jpg "New Year's Eve White party at Above Eleven Skybar")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722150/IMG_20191231_230832_xyxeij.jpg "New Year's Eve White Party at Above Eleven Skybar")
 
-New year's even in Bangkok saw masses of people pour into the street around our airbnb, which happened to be near "Central World Mall" which is the site of their big NYE bash akin to New York's Times square. The walk to the subway turned out to be more exciting than the party we attended, since we got to witness elated groups of revelers gearing up around Central World, laughing and joking as they filled the streets in front of JumboTrons that filled the Central World square. In retrospect, we wished we had just stayed for the free Central World party instead of going to the WAY overpriced skybar. Ah well, it sounded like a good idea haha. 
+New year's even in Bangkok saw masses of people pour into the street around our airbnb, which happened to be near "Central World Mall" which is the site of their big NYE bash akin to New York's Times square. The walk to the subway turned out to be more exciting than the party we attended, since we got to witness elated groups of revelers gearing up around Central World, laughing and joking as they filled the streets in front of JumboTrons that filled the Central World square. In retrospect, we wished we had just stayed for the free Central World party instead of going to the WAY overpriced sky bar. Ah well, it sounded like a good idea haha. 
 
 The Above Eleven party was of course completely tourists and expats. We were crammed into the lower floor on arrival with barely room to get drinks. The upper floor was a bit better, but the lack of inspiring dance music made it a very tame night. However, the view was lovely and the balloons were colorful. Most importantly, I got to spend NYE with the love of my life.
 
-One thing  we really enjoyed were the awe inspiring rooftop pools of Bangkok. The Marriot Surawongse and also 137 Pillars and Suites both had amazing pools atop their skyscraper buildings, from which we could see across the city and felt like we were swimming on a cloud. I may have a slight obsession with infinity pools and scoured the interwebs for the best rooftop pools lol. Also note the yellow bandaid on Brandon's chest in the last pool pic. We found Rilakkuma bandaids in Japan which he proudly sported.
+One thing we really enjoyed was the awe-inspiring rooftop pools of Bangkok. The Marriot Surawongse and also 137 Pillars and Suites both had amazing pools atop their skyscraper buildings, from which we could see across the city and felt like we were swimming on a cloud. I may have a slight obsession with infinity pools and scoured the interwebs for the best rooftop pools lol. Also note the yellow bandaid on Brandon's chest in the last pool pic. We found Rilakkuma bandaids in Japan which he proudly sported.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722174/MVIMG_20200107_123905_qbwbyw.jpg "Brandon at the pool of the Marriot Surawongse")
 
@@ -44,7 +44,7 @@ One thing  we really enjoyed were the awe inspiring rooftop pools of Bangkok. Th
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722144/IMG_2895_gd0wwh.jpg "Chris and Brandon on a longtail boat at a floating market")
 
-We also took a 3 hour tour of a floating market near Bangkok. The most famous floating markets were actually hours away and involved 8 hour tour trips so we opted for a more local one, which although may have been less impressive, was still fun and gave us the opportunity to chat with a great tour guide and to take a nice boat ride. My favorite part was going through a quiet pond-like area with lily pads and lotus flowers. It was gorgeous as we glided past the regal blooms of pink. The tour guide gave us fish food and we sprinkled it in the water, watching as dozens of big hungry fish jumped up to snap the food.
+We also took a 3-hour tour of a floating market near Bangkok. The most famous floating markets were actually hours away and involved 8-hour tour trips so we opted for a more local one, which although may have been less impressive, was still fun and gave us the opportunity to chat with a great tour guide and to take a nice boat ride. My favorite part was going through a quiet pond-like area with lily pads and lotus flowers. It was gorgeous as we glided past the regal blooms of pink. The tour guide gave us fish food and we sprinkled it in the water, watching as dozens of big hungry fish jumped up to snap the food.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722135/IMG_2950_rdkhqp.jpg "Lotus flowers!")
 
@@ -60,10 +60,10 @@ One night we tried out a speakeasy I had read about called "The Crimson Room". I
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580970336/MVIMG_20200107_220559_vkopzc.jpg "Crimson Room \\\\"door\\\\"")
 
-Once inside, we were ushered to our reserved table (highly recommend, otherwise good luck trying to get a seat). The entire room was swathed in crimson velvet, with a centerpiece of brass that looked like an impressionistic rendition of trumpets tangled together. The stage was small and cozy, and a duo of singer and piano player enveloped the room with jazzy melody. The roaring twenties definitely permeated the atmosphere and we leaned back and enjoyed our strongly flavored and very unique cocktails.
+Once inside, we were ushered to our reserved table (highly recommend, otherwise good luck trying to get a seat). The entire room was swathed in crimson velvet, with a centerpiece of brass that looked like an impressionistic rendition of trumpets tangled together. The stage was small and cozy, and a duo of singer and piano player enveloped the room with a jazzy melody. The roaring twenties definitely permeated the atmosphere and we leaned back and enjoyed our strongly flavored and very unique cocktails.
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722165/MVIMG_20200107_202422_ab1nos.jpg "At the Crimson Room")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722172/IMG_20200107_202541_owfruq.jpg "Our corner of the jazzy speakeasy")
 
-Overall we enjoyed our time in Bangkok although felt that two weeks may have been a bit long. The sweltering heat of the city, the smells, and the contrast between the rich and poor parts made this city feel drastically different than Tokyo and Seoul. One thing that has been consistent between all three of those cities is that the residents have an astounding amount of proficiency at other languages compared to Americans. It makes Brandon and I try to study Spanish and Japanese harder. It also makes us feel very grateful at how easy it is to travel when one speaks English, perhaps undeservedly so.
+Overall we enjoyed our time in Bangkok although felt that two weeks may have been a bit long. The sweltering heat of the city, the smells, and the contrast between the rich and poor parts made this city feel drastically different than Tokyo and Seoul. One thing that has been consistent between all three of those cities is that the residents have an astounding amount of proficiency in other languages compared to Americans. It makes Brandon and I try to study Spanish and Japanese harder. It also makes us feel very grateful at how easy it is to travel when one speaks English, perhaps undeservedly so.
