Update bangkok post

--- a/src/pages/blog/2020-02-03-bangkok.md
+++ b/src/pages/blog/2020-02-03-bangkok.md
@@ -7,18 +7,20 @@ description: Bangkok
 tags:
   - Bangkok
   - Thailand
+featuredimage: >-
+  https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722140/IMG_2985_ia6kgm.jpg
 ---
-Bangkok 12/28/19-1/13/20
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722140/IMG_2985_ia6kgm.jpg "Bangkok skyline from our hotel room at the Marriott Surawongse")
 
-We flew from Narita airport to Bangkok and stepped off the plane into the warm arms of humidity. It was a sharp contrast to the frost-breathing air that we had just left behind. Our two weeks in Bangkok were not really what I had expected. The city as a whole was harder for me to tolerate walking around in, due to a combination of the heat and the sewage smells on almost every street. I tend to get bothered by smell more than Brandon and it definitely affected my drive to go out and see things.
+We flew from Tokyo Narita airport to Bangkok and stepped off the plane into the warm embrace of humidity. It was a sharp contrast to the frost-breathing air that we had just left behind. Our time in Bangkok was not really what I had expected. The city as a whole was harder for me to tolerate walking around in, due to a combination of the heat and the sewage smells on almost every street. I tend to get bothered by smell more than Brandon and it definitely affected my drive to go out and see things.
 
 In addition, bathrooms were not readily available very often along the public transport routes, which also decreased my desire to go out. I'm always the girl who needs to pee every 1-2 hours so this is a logistic I think about a lot. I was really missing Japanese subway bathrooms around then.
 
-Thus, we ended up getting a very small slice of Bangkok (tourist) life consisting of mostly air-conditioned hotels, malls, massage places, and afternoon teas.
+Don't get me wrong, Bangkok is a fascinating and unique city and the people were really nice. But the combination of heavy traffic, heat and poor air quality made it much more of a chore to get around.
+Thus, we only got a small slice of Bangkok (tourist) life consisting of mostly air-conditioned hotels, malls, massage places, and afternoon teas.
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722124/IMG_2869_mg3pf2.jpg "One of the food areas at a Bangkok Mall. I honestly can't recall which one.")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722124/IMG_2869_mg3pf2.jpg "One of the food areas in the Icon Siam mall")
 
 First of all, let's talk about Bangkok malls. They are insane. They are huge 8 story mega complexes with bone chilling AC and the lushest interior decorations you can think of. The above photo is how several malls chose to decorate their food areas. Some had indoor ponds and waterways winding around the fake vegetation. One mall had an indoor lake along which they had boat food vendors park. The most impressive was the new mall "Icon" for which you take a ferry across the water just to arrive at its front doors. Icon also provides an outdoor water fountain and laser light show each evening which was very impressive.
 
@@ -28,41 +30,39 @@ We spent a good amount of time in Bangkok malls since our airbnb was down the st
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722150/IMG_20191231_230832_xyxeij.jpg "New Year's Eve White Party at Above Eleven Skybar")
 
-New year's even in Bangkok saw masses of people pour into the street around our airbnb, which happened to be near "Central World Mall" which is the site of their big NYE bash akin to New York's Times square. The walk to the subway turned out to be more exciting than the party we attended, since we got to witness elated groups of revelers gearing up around Central World, laughing and joking as they filled the streets in front of JumboTrons that filled the Central World square. In retrospect, we wished we had just stayed for the free Central World party instead of going to the WAY overpriced sky bar. Ah well, it sounded like a good idea haha. 
+New year's even in Bangkok saw masses of people pour into the street around our airbnb, which happened to be near "Central World Mall" which is the site of their big NYE bash akin to New York's Times square. The walk to the subway turned out to be more exciting than the party we attended, since we got to witness elated groups of revelers gearing up around Central World, laughing and joking as they filled the streets in front of JumboTrons that filled the Central World square. In retrospect, we wished we had just stayed for the free Central World party instead of going to the WAY overpriced sky bar. Ah well, it sounded like a good idea haha.
 
-The Above Eleven party was of course completely tourists and expats. We were crammed into the lower floor on arrival with barely room to get drinks. The upper floor was a bit better, but the lack of inspiring dance music made it a very tame night. However, the view was lovely and the balloons were colorful. Most importantly, I got to spend NYE with the love of my life.
+The Above Eleven party was of course full of tourists and expats. We were crammed into the lower floor on arrival with barely room to get drinks. The upper floor was a bit better, but the lack of inspiring dance music made it a very tame night. However, the view was lovely and the balloons were colorful. Most importantly, I got to spend NYE with the love of my life.
 
-One thing we really enjoyed was the awe-inspiring rooftop pools of Bangkok. The Marriot Surawongse and also 137 Pillars and Suites both had amazing pools atop their skyscraper buildings, from which we could see across the city and felt like we were swimming on a cloud. I may have a slight obsession with infinity pools and scoured the interwebs for the best rooftop pools lol. Also note the yellow bandaid on Brandon's chest in the last pool pic. We found Rilakkuma bandaids in Japan which he proudly sported.
+One thing we really enjoyed was the awe-inspiring rooftop pools of Bangkok. The Marriot Surawongse and also 137 Pillars and Suites both had amazing pools atop their skyscraper buildings, from which we could see across the city and felt like we were swimming on a cloud. I may have a slight obsession with infinity pools and scoured the interwebs for the best rooftop pools lol.
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722174/MVIMG_20200107_123905_qbwbyw.jpg "Brandon at the pool of the Marriot Surawongse")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722158/IMG_20200112_104013_mqv5bw.jpg "Me at the pool at 137 Pillars and Suites")
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722158/IMG_20200112_104013_mqv5bw.jpg "Chris at the pool at 137 Pillars and Suites")
-
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722146/IMG_3130-05-01_gbtcy4.jpg "Brandon at 137 Pillars")
-
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722155/IMG_20200112_105957_lgxw6s.jpg "Chris and Brandon at 137 Pillars")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722146/IMG_3130-05-01_gbtcy4.jpg "Brandon in his \"pensive\" pose")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722144/IMG_2895_gd0wwh.jpg "Chris and Brandon on a longtail boat at a floating market")
 
 We also took a 3-hour tour of a floating market near Bangkok. The most famous floating markets were actually hours away and involved 8-hour tour trips so we opted for a more local one, which although may have been less impressive, was still fun and gave us the opportunity to chat with a great tour guide and to take a nice boat ride. My favorite part was going through a quiet pond-like area with lily pads and lotus flowers. It was gorgeous as we glided past the regal blooms of pink. The tour guide gave us fish food and we sprinkled it in the water, watching as dozens of big hungry fish jumped up to snap the food.
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722135/IMG_2950_rdkhqp.jpg "Lotus flowers!")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1582107741/IMG_2950_ooazly.jpg "Lotus flowers!")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722133/IMG_2891_bosjae.jpg "Boat view")
 
-Food-wise we loved all the tasty pad thai in Bangkok. We also ate way too much sticky mango rice and wondered how we have lived so long without it all these years. Thirdly we enjoyed trying out papaya salad which uses green papaya and lots of spicy dressing. Apparently it's a favorite among dieting women, and I can see why. It's a salad that's healthy and actually flavorful and delicious, although be warned it's REALLY spicy sometimes. It took us 30 minutes to recover from papaya salad.
+We were excited we managed to found somewhere to dance bachata and salsa in Bangkok. Relying on some facebook contacts, we discovered the ["Bachata on Mondays"](https://www.facebook.com/groups/bachataonmondaysbangkok/?fref=nf) social held at a Mexican restuarant near the city center. The bachata scene definitely seems smaller than in Tokyo but we had a pretty fun time and everyone was really friendly.
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722137/IMG_2986_m7hcd9.jpg "pad thai, often covered with a thin layer of egg that you break up")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1582599857/bangkok_bachata.jpg "Bangkok Bachata social")
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722136/IMG_2987_rtwx2o.jpg "Sticky mango rice yummmm")
+Food-wise we loved all the tasty pad thai and myriad curries we got to try in Bangkok. We also ate way too much sticky mango rice and wondered how we have lived so long without it all these years. Thirdly we enjoyed trying out papaya salad which uses green papaya and lots of spicy dressing. Apparently it's a favorite among dieting women, and I can see why. It's a salad that's healthy and actually flavorful and delicious, although be warned it's REALLY spicy sometimes. It took us 30 minutes to recover from papaya salad.
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722137/IMG_2986_m7hcd9.jpg "Pad Thai, often covered with a thin layer of egg that you break up")
+
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1582107741/IMG_2987_qzuxns.jpg "Sticky mango rice yummmm")
 
 One night we tried out a speakeasy I had read about called "The Crimson Room". It was rather difficult to find, as the door didn't really look like a door at all, as pictured below.
 
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580970336/MVIMG_20200107_220559_vkopzc.jpg "Crimson Room \\\\"door\\\\"")
+![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580970336/MVIMG_20200107_220559_vkopzc.jpg "Can you spot the Crimson Room \"door\"?")
 
 Once inside, we were ushered to our reserved table (highly recommend, otherwise good luck trying to get a seat). The entire room was swathed in crimson velvet, with a centerpiece of brass that looked like an impressionistic rendition of trumpets tangled together. The stage was small and cozy, and a duo of singer and piano player enveloped the room with a jazzy melody. The roaring twenties definitely permeated the atmosphere and we leaned back and enjoyed our strongly flavored and very unique cocktails.
-
-![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722165/MVIMG_20200107_202422_ab1nos.jpg "At the Crimson Room")
 
 ![](https://res.cloudinary.com/bctravel/image/upload/c_scale,f_auto,q_auto,w_1080/v1580722172/IMG_20200107_202541_owfruq.jpg "Our corner of the jazzy speakeasy")
 
