--- a/src/pages/blog/2020-08-25-getting.md
+++ b/src/pages/blog/2020-08-25-getting.md
@@ -1,6 +1,6 @@
 ---
 templateKey: blog-post
-title: Getting
+title: Getting to Croatia
 author: Brandon
 date: 2020-08-15T14:31:41.839Z
 description: Getting to Croatia
