Update vis post

--- a/src/pages/blog/2020-10-11-vis.md
+++ b/src/pages/blog/2020-10-11-vis.md
@@ -3,10 +3,46 @@ templateKey: blog-post
 title: Vis
 author: Chris
 date: 2020-09-12T09:56:33.978Z
-description: Our time on the islannd of Vis
+description: Our time on the island of Vis
 tags:
   - croatia
   - vis
   - islands
 ---
-Vis was a beautiful island.
+After a beautiful [5 days in Dubrovnik](https://www.brandonandchris.com/blog/2020-09-12-dubrovnik/), we drove back to Split and hopped on a ferry to the picturesque island of Vis.
+
+Fun fact: The film [Mamma Mia 2](https://www.imdb.com/title/tt6911608/) was filmed on Vis even though the story takes place on the same Greek island as the first movie.
+
+Our first stay was in a small apartment in the little town of Komiža, on the western coast of Vis. It was a modest accomodation but with a great view. Chris was also very taken with all the kittens roaming the alley behind the building (essentially a free [cat cafe](https://www.brandonandchris.com/blog/2019-12-13-cat-cafe-mocha-lounge-in-shibuya/)). She is now always prepared with cat treats in her purse.
+
+[photo of chris feeding cats]
+
+[photo of the view from apartment]
+
+For dinner, we searched for a well reviewed nearby konoba (a Croatian taver-style restaurant) and settled for Konoba & Villa Jastožera. When we got there, Chris thought it looked really familiar and it eventually dawned on her that she'd seen it in Mamma Mia! - turns out it's where they filmed a "Greek tavern" scene. It was a fun first konoba experience as the restuarant sits out over the water and you can watch them as they catch lobsters and pull them from the traps.
+
+[photos of the konoba]
+
+The waters around Vis are beautifully shallow with a number of secluded hard to reach beaches so booked a private boat tour of the surrounding islands. Our tour guide was actually an American originally from California and he exuded an unmistakable "California beach bum" vibe. His boat was a tiny motor boat that kept a much more leisurely pace compared with our previous tour.
+
+[boat tour photos]
+[smokova beach]
+
+Komiža has fun little old town that was surprisingly bustling at night, where we tried some wine and of course gelato.
+
+Next we spent a few night in the town of Vis at the opposite end of the island (also named Vis). As usual we checked out the local beaches like Mala Travna.
+
+Walking around Vis it felt like a much more laid back little town than Komiža. They are lots of little restaurants with delicious food and a great view of the sea. We even found a tasty brunch place practically right on the water.
+
+[photos of eating]
+
+Probably the most fun unique experience had to be the quad ATV tour of the island we took. You follow a tour guide around the island to remote locations like former military bases and an abandoned bomb shelter - all while cruising up and down the hillside on ATVs. At each stop the guide explains the interesting history of the island, such as its strategic military importance. We highly recommend this tour if you ever find yourself on Vis.
+
+[photos of atv tour]
+[stop at Pritiscina beach]
+
+At the recommendation of our airbnb host, we made sure to have dinner at [Roki's](https://www.tripadvisor.com/Restaurant_Review-g424973-d4744235-Reviews-Roki_s-Vis_Island_of_Vis_Split_Dalmatia_County_Dalmatia.html) to try Peka. Peka is probably the most iconic dish from Croatia's Dalmatia region; lots of Dalmatian homes have large outdoor fireplaces where they cook it. It's essentially meat (we chose lamb) mixed with lots of vegetables and slow cooked for several hours in a cast iron pot inside a stone fireplace.
+
+[photos from rokis]
+
+All in all we had a great time on this charming little island with a surprising amount of history and friendly local peoples.
